[project]
name = "archstone"
version = "0.1.0"
description = "An assembler and disassembler for the ARMv4T instruction set"
authors = [
  { name = "Gui64977" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
keywords = ["arm", "armv4t", "assembler", "disassembler"]

classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Gui64977/archstone"
Repository = "https://github.com/Gui64977/archstone"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
